@@ -16,26 +16,17 @@ describe 'sssd::install' do
             :mode    => '0711',
             :require => 'Package[sssd]',
           }) }
-          it { is_expected.to contain_package('sssd').with_ensure('latest') }
-          it { is_expected.to contain_package('sssd-tools').with_ensure('latest') }
-          it { is_expected.to contain_package('sssd-client').with_ensure('latest') }
+          it { is_expected.to contain_package('sssd').with_ensure('installed') }
+          it { is_expected.to contain_package('sssd-tools').with_ensure('installed') }
+          it { is_expected.to contain_package('sssd-client').with_ensure('installed') }
         end
 
         context 'when install_user_tools = false' do
           let(:params) {{ :install_user_tools => false }}
 
           it { is_expected.to compile.with_all_deps }
-          it { is_expected.to contain_package('sssd').with_ensure('latest') }
-          it { is_expected.to_not contain_package('sssd-tools').with_ensure('latest') }
-          it { is_expected.to contain_package('sssd-client').with_ensure('latest') }
-        end
-
-        context 'when package_ensure = installed' do
-          let(:params) {{ :package_ensure =>  'installed' }}
-
-          it { is_expected.to compile.with_all_deps }
           it { is_expected.to contain_package('sssd').with_ensure('installed') }
-          it { is_expected.to contain_package('sssd-tools').with_ensure('installed') }
+          it { is_expected.to_not contain_package('sssd-tools').with_ensure('installed') }
           it { is_expected.to contain_package('sssd-client').with_ensure('installed') }
         end
       end
