@@ -55,7 +55,7 @@ end
 
 RSpec.configure do |c|
   # ensure that environment OS is ready on each host
-  fix_errata_on hosts
+  fix_errata_on(hosts)
 
   # Readable test descriptions
   c.formatter = :documentation
@@ -64,12 +64,12 @@ RSpec.configure do |c|
   c.before :suite do
     begin
       nonwin = hosts.dup
-      nonwin.delete_if {|h| h[:platform] == 'windows-server-amd64' }
+      nonwin.delete_if {|h| h[:platform] =~ /windows/ }
       # Install modules and dependencies from spec/fixtures/modules
       copy_fixture_modules_to( nonwin )
       begin
         server = only_host_with_role(nonwin, 'server')
-      rescue ArgumentError =>e
+      rescue ArgumentError => e
         server = only_host_with_role(nonwin, 'default')
       end
       # Generate and install PKI certificates on each SUT
